--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["vault", "membership", "premium", "content"],
+  "keywords": [
+    "vault",
+    "membership",
+    "premium",
+    "content"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "stripe": "^14.5.0",
-    "express-validator": "^7.0.1",
     "cookie-parser": "^1.4.6",
-    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
